RESOLVED FIXED295541
if-ancestor-frame-url won't work with site isolation
https://bugs.webkit.org/show_bug.cgi?id=295541
Summary if-ancestor-frame-url won't work with site isolation
Elijah Sawyers
Reported 2025-07-07 13:42:09 PDT
Attachments
Elijah Sawyers
Comment 1 2025-07-07 13:47:07 PDT
EWS
Comment 2 2025-07-07 22:55:03 PDT
Committed 297098@main (5c27a31ec45e): <https://commits.webkit.org/297098@main> Reviewed commits have been landed. Closing PR #47679 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.