if-ancestor-frame-url won't work with site isolation https://bugs.webkit.org/show_bug.cgi?id=295541 rdar://155234942

Reviewed by Brian Weinstein and Timothy Hatcher.

Revert "dNR: fix sub_frame resourceType allowAllRequests rules"
This reverts commit 34e4b871322e872acaed32b6cec020679fac098a.

Revert "Introduce a new WebKit Content Blocking condition to act on the current frame or ancestor frame URL"
This reverts commit 0d65d2e39211f8530206ac0d251c468d47cb1eaa.

Canonical link: https://commits.webkit.org/297098@main